--- a/ActionSheet/app/src/main/res/layout/activity_main.xml
+++ b/ActionSheet/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="openSlideUpMenu"
-        android:text="打开ActionSheet"/>
+        android:text="Open ActionSheet"/>
 
 </LinearLayout>
